# lau_app_back

./: .env  .gitignore  LICENSE  Makefile  README.md  alembic.ini  lau_app_back.code-workspace  pyproject.toml  pytest.ini  start.py
_deprecated/: Common.py  Conta.py  appxxx.py  ofxParser.py  run.py
alembic/: env.py
alembic/versions/: 330c1f2d0082_create_table_sourcecode.py  3a8ebeb3cc3c_initial.py  658dc4618ebd_plang_assemblerstmt_novos_campos.py  6f53b2968c45_initial.py  7e13257087ad_plang_subset_assemblerstmt.py  81d92a66c71d_inclusao_category.py  b6cb84c66ea1_retirando_category.py  c1a24d014f1e_initial.py
app/: initial_data.py  main.py  remove_test_data.py
app/api/: depsAsync.py  endpoints.py  login.py  users.py
app/config/: alembicBases.py  settings.py
app/config/integration/: crud.py  endpoints.py  models.py  schemas.py
app/core/: exceptions.py  security.py
app/crud/: baseAsync.py  baseAsyncMongo.py  crud_user.py
app/db/: sessionAsync.py  sessionAsyncMongo.py
app/models/sql/: user.py
app/modules/lau_commons/api/: endpoints.py  users.py
app/modules/lau_commons/core/: exceptions.py  pydanticObjectId.py  security.py
app/modules/lau_commons/crud/: baseAsync.py  crud_user.py
app/modules/lau_commons/models/: baseModel.py  token.py  user.py
app/modules/lau_finance/: __init__.py
app/modules/lau_finance/api/: accounts.py  categories.py  endpoints.py  institutions.py  transactions.py
app/modules/lau_finance/crud/: crud_account.py  crud_category.py  crud_institution.py  crud_transaction.py
app/modules/lau_finance/models/: account.py  category.py  institution.py  transaction.py
app/modules/lau_finance/models/nosql/: category.py
app/modules/lau_finance/models/sql/: account.py
app/modules/lau_plang/api/: endpoints.py
app/modules/lau_plang/crud/: crud_assemblerStmt.py  crud_subset.py
app/modules/lau_plang/models/sql/: assemblerStmt.py  sourceCode.py  subset.py
app/schemas/: __init__.py  user.py
app/tests/: conftest.py
app/tests/api/: test_api_celery.py  test_api_login.py  test_api_users.py
app/tests/crud/: test_crud_user.py
app/tests/modules/lau_finance/api/: test_api_accounts.py  test_api_category.py  test_api_institutions.py
app/tests/modules/lau_finance/crud/: test_crud_account.py  test_crud_category.py  (+2 more)
app/tests/utils/: fakeUser.py  utils.py
(+4 files in other folders)
